--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -6,7 +6,10 @@ html(lang='en')
     title= title
     block css
       link(rel='stylesheet', href='/css/style.css')
+      link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     block js
+      script(src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js')
+      script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
       if ENV_DEVELOPMENT
         script(src='http://localhost:35729/livereload.js')
   body
