Agregar menu superior

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,7 +2,9 @@ doctype html
 html(lang='en')
   head
     meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='description' content='Pagina web Andres Luque')
+    meta(name='author' content='Andres F. Luque C.')
     title= title
     block css
       link(rel='stylesheet', href='/css/style.css')
@@ -12,5 +14,24 @@ html(lang='en')
       script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
       if ENV_DEVELOPMENT
         script(src='http://localhost:35729/livereload.js')
-  body
+  body(id='page-top' class='index')
+    div(id='skipnav')
+      a(href='#maincontent') Skip to main content
+    nav(id='mainNav' class='navbar navbar-default navbar-fixed-top navbar-custom')
+      div(class='navbar-header page-scroll')
+        button(type='button' class='navbar-toggle' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1')
+          span(class='sr-only') Toggle navigation
+          i(class='fa fa-bars')
+        a(class='navbar-brand' href='#page-top') Start Bootstrap
+      
+      div(class='collapse navbar-collapse' id='bs-example-navbar-collapse-1')
+        ul(class='nav navbar-nav navbar-right')
+          li(class='hidden')
+            a(href='#page-top')
+          li(class='page-scroll')
+            a(href='#portfolio') Portafolio
+          li(class='page-scroll')
+            a(href='#about') About
+          li(class='page-scroll')
+            a(href='#contact') Contact      
     block content
