--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,5 +1,19 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+
+  //- Sección principal
+  header
+    div(class='container' id='maincontent' tabindex='-1')
+      div(class='row')
+        div(class='col-lg-12')
+          img(class='img-responsive' src='/img/profile.png')
+          div(class='intro-text')
+            h1(class='name') Andres Luque
+            hr(class='star-light')
+            span(class='skills') Full Stack Developer
+  
+  //- Sección del portafolio
+  include portafolio
+
+  include about
